[tool.poetry]
name = "rss-wikidata-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rss_wikidata_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
pywikibot = "^7.7.1"
wikitextparser = "^0.51.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
